adjust margin of region search clear all button to prevent content jumping when it appears

--- a/less/components/regions.less
+++ b/less/components/regions.less
@@ -102,7 +102,8 @@
         justify-content: center;
         align-items: center;
         position: relative;
-        top: -12.5em; //this is a terrible magic number. need to check it works in many places
+        margin-top:-@spacer*1.5;
+        top: -11em; //this is a terrible magic number. need to check it works in many places
         font-weight: bold;
         cursor: pointer;
         float: right;
